@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="metadata.filmweb.pl" name="Filmweb" version="2.4.1" provider-name="Regss">
+<addon id="metadata.filmweb.pl" name="Filmweb" version="2.4.2" provider-name="Regss">
     <requires>
         <import addon="xbmc.metadata" version="2.1.0"/>
         <import addon="metadata.common.themoviedb.org" version="3.1.9"/>
